<?xml version="1.0"?>
<package format="2">

  <name>orca</name>
  <version>0.0.0</version>
  <description>ROS driver for the BlueRobotics BlueROV2</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/clydemcqueen/orca.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/orca/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>orca_base</exec_depend>
  <exec_depend>orca_description</exec_depend>
  <exec_depend>orca_driver</exec_depend>
  <exec_depend>orca_gazebo</exec_depend>
  <exec_depend>orca_msgs</exec_depend>
  <exec_depend>orca_topside</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
