<?xml version="1.0"?>
<package format="2">

  <name>orca_description</name>
  <version>0.0.0</version>
  <description>Robot description files for Orca</description>

  <maintainer email="clyde@mcqueen.net">clyde</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/clydemcqueen/orca.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/orca/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>

</package>