<?xml version="1.0"?>
<package format="2">

  <name>orca_driver</name>
  <version>0.0.0</version>
  <description>Orca driver</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/clydemcqueen/orca.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/orca/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>orca_msgs</depend>
  <depend>phidgets_imu</depend>
  <depend>python-smbus</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
