<?xml version="1.0"?>
<package format="2">

  <name>orca_gazebo</name>
  <version>0.1.0</version>
  <description>Orca simulation environment</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>
  
  <url type="repository">https://github.com/clydemcqueen/orca.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/orca/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>orca_base</depend>
  <depend>orca_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>